# p1-starting-an-api-kasou-sekai

./: README.md  pyproject.toml
todo/: __init__.py
todo/views/: routes.py
